--- a/miniprogram/pages/home/examInterview/examInterview.wxml
+++ b/miniprogram/pages/home/examInterview/examInterview.wxml
@@ -1,15 +1,16 @@
 <!--miniprogram/pages/home/examInterview/examInterview.wxml-->
 <cu-custom bgColor="bg-yellow" isBack="{{true}}" >
-	<view slot="content">{{questionObj.title}}</view>
+	<!-- <view slot="content">{{bank.title}}</view> -->
+	<view slot="content">模拟面试</view>
 	<view slot="backText"></view>
 </cu-custom>
  <block wx:if="{{type === 'audio'}}">
 <view class="bank-wrap">
 	<view class="bank-title">
-		<text>{{questionObj.title}}</text>
+		<text>{{bank.title}}</text>
 	</view>
 	<view class="score-time">
-		<text class="time">题目数量：{{questionObj.count}}道</text>
+		<text class="time">题目数量：{{bank.count}}道</text>
 	</view>
 		<view class="line">
 	</view>
@@ -20,7 +21,7 @@
 <view class="txt3">面试官</view>
 <view class="txt4">若没有听清题目，可点击</view>
 <image src="../../../images/icon/graysou.png" class="img3"></image>
-<view class="txt5">让面试官再讲一遍</view>
+<view class="txt5">请面试官再讲一遍</view>
 <button class="txt6" disabled="{{btnDisabled}}" hidden="{{src}}" bindtap="handleStart">开始</button>
 <button class="txt6" disabled="{{btnDisabled}}" hidden="{{(!src)&&(!disabled)}}" bindtap="handleNext">下一题</button>
 <button class="txt6" disabled="{{btnDisabled}}" hidden="{{!(src&&disabled)}}" bindtap="handleEnd">结束</button>
