--- a/miniprogram/pages/home/examWritten/examWritten.wxml
+++ b/miniprogram/pages/home/examWritten/examWritten.wxml
@@ -1,5 +1,6 @@
 <cu-custom bgColor="bg-yellow" isBack="{{!ifSubmit?true:false}}">
-	<view slot="content">{{bank.title}}</view>
+	<!-- <view slot="content">{{bank.title}}</view> -->
+	<view slot="content">模拟笔试</view>
 	<view wx:if="{{!ifSubmit}}" slot="backText"></view>
 </cu-custom>
 
