--- a/miniprogram/pages/questionBank/endQuestion/endQuestion.wxml
+++ b/miniprogram/pages/questionBank/endQuestion/endQuestion.wxml
@@ -5,7 +5,7 @@
 
 <view class="wrap">
 	<view class="title">
-		{{title}}
+		{{bank.title}}
 	</view>
 	<view class="motto">
 	“每日一套，早日offer”
@@ -16,55 +16,103 @@
 				<text>题型</text>
 			</view>
 			<view class="column">
-				<text>数量</text>
+				<text>正确率</text>
 			</view>
 		</view>
-		<view wx:if="{{questionTypeNum.radio}}" class="row">
+		<!-- <view wx:if="{{bank.questionTypeNum.radio}}" class="row">
 			<view class="column">
 				<text>单选题</text>
 			</view>
 			<view class="column">
-				<text>{{questionTypeNum.radio}}</text>
+				<text>{{bank.questionTypeNum.radio}}</text>
 			</view>
 		</view>
-		<view wx:if="{{questionTypeNum.checkbox}}" class="row">
+		<view wx:if="{{bank.questionTypeNum.checkbox}}" class="row">
 			<view class="column">
 				<text>多选题</text>
 			</view>
 			<view class="column">
-				<text>{{questionTypeNum.checkbox}}</text>
+				<text>{{bank.questionTypeNum.checkbox}}</text>
 			</view>
 		</view>
-		<view wx:if="{{questionTypeNum.judge}}" class="row">
+		<view wx:if="{{bank.questionTypeNum.judge}}" class="row">
 			<view class="column">
 				<text>判断题</text>
 			</view>
 			<view class="column">
-				<text>{{questionTypeNum.judge}}</text>
+				<text>{{bank.questionTypeNum.judge}}</text>
 			</view>
 		</view>
-		<view wx:if="{{questionTypeNum.blank}}" class="row">
+		<view wx:if="{{bank.questionTypeNum.blank}}" class="row">
 			<view class="column">
 				<text>填空题</text>
 			</view>
 			<view class="column">
-				<text>{{questionTypeNum.blank}}</text>
+				<text>{{bank.questionTypeNum.blank}}</text>
 			</view>
 		</view>
-		<view wx:if="{{questionTypeNum.sort}}" class="row">
+		<view wx:if="{{bank.questionTypeNum.sort}}" class="row">
 			<view class="column">
 				<text>排序题</text>
 			</view>
 			<view class="column">
-				<text>{{questionTypeNum.sort}}</text>
+				<text>{{bank.questionTypeNum.sort}}</text>
 			</view>
 		</view>
-		<view wx:if="{{questionTypeNum.unsteady}}" class="row">
+		<view wx:if="{{bank.questionTypeNum.unsteady}}" class="row">
 			<view class="column">
 				<text>不定项选题</text>
 			</view>
 			<view class="column">
-				<text>{{questionTypeNum.unsteady}}</text>
+				<text>{{bank.questionTypeNum.unsteady}}</text>
+			</view>
+		</view> -->
+				<view wx:if="{{bank.questionTypeNum.radio}}" class="row">
+			<view class="column">
+				<text>单选题({{bank.questionTypeNum.radio}}道)</text>
+			</view>
+			<view class="column">
+				<text>{{bank.accuracy.radio}}</text>
+			</view>
+		</view>
+		<view wx:if="{{bank.questionTypeNum.checkbox}}" class="row">
+			<view class="column">
+				<text>多选题({{bank.questionTypeNum.checkbox}}道)</text>
+			</view>
+			<view class="column">
+				<text>{{bank.accuracy.checkbox}}</text>
+			</view>
+		</view>
+		<view wx:if="{{bank.questionTypeNum.judge}}" class="row">
+			<view class="column">
+				<text>判断题({{bank.questionTypeNum.judge}}道)</text>
+			</view>
+			<view class="column">
+				<text>{{bank.accuracy.judge}}</text>
+			</view>
+		</view>
+		<view wx:if="{{bank.questionTypeNum.blank}}" class="row">
+			<view class="column">
+				<text>填空题({{bank.questionTypeNum.blank}}道)</text>
+			</view>
+			<view class="column">
+				<text>{{bank.accuracy.blank}}</text>
+			</view>
+		</view>
+		<view wx:if="{{bank.questionTypeNum.sort}}" class="row">
+			<view class="column">
+				<text>排序题({{bank.questionTypeNum.sort}}道)</text>
+			</view>
+			<view class="column">
+				<text>{{bank.accuracy.sort}}</text>
+			</view>
+		</view>
+		<view wx:if="{{bank.questionTypeNum.unsteady}}" class="row">
+			<view class="column">
+        <text>不定项选题({{bank.questionTypeNum.unsteady}}道)</text>
+			</view>
+			<view class="column">
+				<text>{{bank.accuracy.unsteady}}</text>
 			</view>
 		</view>
 
