--- a/miniprogram/pages/questionBank/endQuestion/endQuestion.wxss
+++ b/miniprogram/pages/questionBank/endQuestion/endQuestion.wxss
@@ -35,7 +35,8 @@
 .wrap {
 
   position: relative;
-  width: 616rpx;
+  /* width: 616rpx; */
+  width: 655rpx;
   line-height: 40rpx;
   border-radius: 50rpx;
   background-color: rgba(255, 255, 255, 0.51);
@@ -43,7 +44,8 @@
   box-shadow: 0rpx 8rpx 18rpx 0rpx rgba(178, 178, 178, 0.4);
   border: 2rpx solid rgba(255, 255, 255, 0);
   margin: 100rpx auto;
-  padding: 40rpx;
+  /* padding: 40rpx; */
+  padding: 30rpx;
 
 }
 .title {
@@ -57,8 +59,10 @@
   margin: 0 auto;
 }
 .data {
-  width: 89%;
-	margin: 40rpx auto;
+  /* width: 89%; */
+  width: 99%;
+  /* margin: 40rpx auto; */
+	margin: 60rpx auto;
 	border: 4rpx solid black;
   color: rgba(16, 16, 16, 1);
   font-size: 32rpx;
@@ -70,14 +74,18 @@
 	font-size: 36rpx;
 }
 .data .row {
-	border-top: 4rpx solid black;
+  border-top: 4rpx solid black;
+  height: 8vh; 
+  
 }
 .data .row:nth-child(1) {
 	border-top: none;
 }
 .data .column {
 	display: inline-block;
-	width: 50%;
+  width: 50%;
+  height: 100%;
+  line-height: 8vh; 
 }
 .data .column:nth-child(1) {
 	border-right: 4rpx solid black;
