--- a/miniprogram/pages/questionBank/enterWritten/enterWritten.wxml
+++ b/miniprogram/pages/questionBank/enterWritten/enterWritten.wxml
@@ -33,7 +33,7 @@
 					</view>
 					<view class="content-wrap">
 						<text>贤者意境</text>
-						<text>每做一道题即可查看一次答案</text>
+						<text>每做一道题即可查看答案</text>
 					</view>
 				</view>
 				</view>
