--- a/miniprogram/pages/home/endInterview/endInterview.wxml
+++ b/miniprogram/pages/home/endInterview/endInterview.wxml
@@ -24,7 +24,7 @@
 	</view>
 </view>
 <view class="btns">
-	<button class="allExam" bindtap="viewAll">查看完整试卷 </button>
+	<button class="allExam" bindtap="viewAll">查看试卷</button>
 	<button class="questiobBank" bindtap="toIndex">返回首页</button>
 </view>
 
