--- a/miniprogram/pages/home/interviewAll/interviewAll.wxss
+++ b/miniprogram/pages/home/interviewAll/interviewAll.wxss
@@ -4,33 +4,31 @@ page {
 }
 .bank-wrap {
   background: white;
-  padding-bottom: 5vh;
+  padding-bottom: 8vh;
 }
-.bank-title {
-  margin-left: 34rpx;
-  padding-top: 42rpx;
-  color: rgba(16, 16, 16, 1);
+.bank-head {
+  display: flex;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
+  padding: 26rpx;
+}
+.bank-head .bank-title {
   font-size: 50rpx;
+  color: rgba(16, 16, 16, 1);
   text-align: left;
   font-family: PingFangSC-regular;
-  width: 80vw;
+  width: 83vw;
   text-overflow: ellipsis;
   overflow: hidden;
-  white-space: nowrap;
-}
-.line {
-  width: 750rpx;
-  border: 1rpx solid rgba(187, 187, 187, 1);
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+
 }
 .bank {
-  margin-left: 34rpx;
-  padding-top: 45rpx;
-  height: 57vh;
-  overflow: auto;
+  padding: 34rpx;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
 }
-.checkout-question {
-  margin-top: 20rpx;
-}
+
 .audio-play {
   width: 120rpx;
   height: 60rpx;
