--- a/miniprogram/pages/home/wrongAll/wrongAll.wxss
+++ b/miniprogram/pages/home/wrongAll/wrongAll.wxss
@@ -1,15 +1,31 @@
+
 page {
   background-color: rgba(255, 255, 255, 1);
 }
-scroll-view{
-  background-color: rgba(255, 255, 255, 1);
-}
+
 
 .bank-wrap {
   background: white;
   padding-bottom: 8vh;
 }
-.bank-title {
+.bank-head {
+  display: flex;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
+  padding: 26rpx;
+}
+.bank-head .bank-title {
+  color: rgba(16, 16, 16, 1);
+  font-size: 50rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  width: 83vw;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+/* .bank-title {
   margin-left: 34rpx;
   padding-top: 42rpx;
   color: rgba(16, 16, 16, 1);
@@ -20,31 +36,26 @@ scroll-view{
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+} */
+
+
+.bank {
+  padding: 34rpx;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
 }
 
-.line {
-  width: 750rpx;
-  border: 1rpx solid rgba(187, 187, 187, 1);
-}
-.bank {
-  margin-left: 34rpx;
-  padding-top: 45rpx;
-  min-height: 50vh;
-  max-height: 70vh;
-  overflow: auto;
-}
-.next-size {
-  z-index: 0;
-}
 
 .my-choosebox checkbox[checked] {
   border: 4rpx solid transparent;
   background: white;
 }
- 
+
 radio.red {
   border: 4rpx solid red !important;
 }
 checkbox.red {
   border: 4rpx solid red !important;
+}
+checkbox.yellow {
+  border: 4rpx solid #ffc200 !important;
 }
