--- a/miniprogram/pages/questionBank/answerInterviewQuestion/answerInterviewQuestion.wxss
+++ b/miniprogram/pages/questionBank/answerInterviewQuestion/answerInterviewQuestion.wxss
@@ -1,37 +1,40 @@
 page {
   background-color: rgba(255, 255, 255, 1);
 }
+
+.bank-head {
+  display: flex;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
+  padding: 26rpx;
+}
 .bank-wrap {
   background: white;
+  padding-bottom: 8vh;
 }
-.bank-title {
-  margin-left: 34rpx;
-  padding-top: 42rpx;
-  color: rgba(16, 16, 16, 1);
+.bank-head .bank-title {
   font-size: 50rpx;
+  color: rgba(16, 16, 16, 1);
   text-align: left;
   font-family: PingFangSC-regular;
-  width: 80vw;
+  width: 83vw;
   text-overflow: ellipsis;
   overflow: hidden;
-  white-space: nowrap;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+
 }
-.line {
-  width: 750rpx;
-  border: 1rpx solid rgba(187, 187, 187, 1);
+.next-publish .publish {
+  border-bottom: none;
 }
+
 .bank {
-  margin-left: 34rpx;
-  padding-top: 45rpx;
-  height: 64vh;
-  overflow: auto;
+  padding: 34rpx;
 }
 .type-btns {
   top: 8vh;
 }
 
-.next-question, .pre-question {
-  margin-top: 20rpx;
-}
+
 
 
