--- a/miniprogram/pages/questionBank/viewInterviewQuestion/viewInterviewQuestion.wxml
+++ b/miniprogram/pages/questionBank/viewInterviewQuestion/viewInterviewQuestion.wxml
@@ -1,8 +1,5 @@
-
-<scroll-view scroll-y="{{modalName==null}}">
-
 	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
-		<view slot="content">{{bank.title}}</view>
+		<view slot="content">查看试卷</view>
 		<view slot="backText"></view>
 	</cu-custom>
 	<wxs module="filter">
@@ -24,18 +21,27 @@
 		}
 	</wxs>
 	<view class="bank-wrap">
-		<view class="bank-title">
-			<text>{{bank.title}} </text>
+	<view class="bank-head">
+			<view class="bank-title">
+				<text>{{bank.title}} </text>
+				<view class="score-time">
+					<text class="time">题目数量：{{bank.count}}道</text>
+				</view>
+			</view>
+			<view class="type-btns">
+				<text bindtap="handleCollection" class="cuIcon-favorfill text-yellow lg cuIcon-{{ifCollect?'favorfill': 'favor'}}"></text>
+				<view class="menu" bindtap="handleMenu" data-target="Modal">
+					<text class="cuIcon-apps lg text-yellow"></text>
+				</view>
+			</view>
 		</view>
-		<view class="score-time">
-			<text class="time">题目数量：{{bank.count}}道</text>
-		</view>
-		<view class="type-btns">
+
+		<!-- <view class="type-btns">
 			<text bindtap="handleCollection" class="cuIcon-favorfill text-yellow lg cuIcon-{{ifCollect?'favorfill': 'favor'}}"></text>
 				<view class="menu" bindtap="handleMenu" data-target="Modal">
 				<text class="cuIcon-apps lg text-yellow"></text>
 			</view>
-		</view>
+		</view> -->
 	
 				
 		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
@@ -52,8 +58,7 @@
 				</view>
 			</view>
 		</view>
-		<view class="line">
-		</view>
+	
 		<view class="bank">
 			<view class="radio-question">
 				<view class="quetion-title">
@@ -91,7 +96,7 @@
 							<view class="user-name">{{item.user_name}} </view>
 						</view>
 						<view class="like-dot" data-commentid="{{item.commentId}}" id="{{item.user_id}}" data-index="{{index}}" bindtap="handleLike">
-							<text class="like cuIcon-appreciatefill {{filter.isLike(item.user_id,item.spot_count)? 'text-yellow' : 'text-grey'}}"></text>
+							<text class="like cuIcon-appreciatefill {{filter.isLike(userId,item.spot_count)? 'text-yellow' : 'text-grey'}}"></text>
 							<view class="dot-num">{{item.spot_count.length}}</view>
 						</view>
 					</view>
@@ -112,18 +117,38 @@
 			</view>
 			<view class="view-all" bindtap="viewAllComments">
 				{{ifViewAllComments?'收起评论':'查看全部评论'}}</view>
-			<view class="publish">
+			<!-- <view class="publish">
 				<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
 				<view bindtap="handlePublish" class="publish-comment">提交</view>
-			</view>
-		</view>
-	</view>
-	<view class="next-size">
-		<view class="next-question chekckout-question" bindtap="handleNext">
-			{{questionIndex < bank.questions.length - 1?'下一题':'查看总结'}}</view>
-		<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
-		<view class="page-size">{{questionIndex + 1}}/{{bank.questions.length}}
+			</view> -->
 		</view>
 	</view>
 
-</scroll-view>
+	<view class="next-publish">
+			<view class="pre-question chekckout-question" bindtap="handlePre">
+					<text class="cuIcon-pullleft  text-{{questionIndex > 0?'yellow': 'gray'}}"></text>
+			</view>
+			<view class="publish">
+				<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
+				<view bindtap="handlePublish" class="publish-comment">发送</view>
+			</view>
+			<view class="next-question chekckout-question" bindtap="handleNext">
+				<block wx:if="{{questionIndex < bank.questions.length - 1}}">
+					<text class="cuIcon-pullright text-yellow"></text>
+				</block>
+				<block wx:else>
+					<text class="cuIcon-roundcheck text-yellow"></text>
+				</block>
+			</view>
+	</view>
+
+
+	<!-- <view class="next-size">
+		<view class="next-question chekckout-question" bindtap="handleNext">
+			{{questionIndex < bank.questions.length - 1?'下一题':'完成'}}</view>
+		<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
+		<view class="page-size">{{questionIndex + 1}}/{{bank.questions.length}}
+		</view>
+	</view> -->
+
+<!-- </scroll-view> -->
