--- a/miniprogram/pages/questionBank/viewInterviewQuestion/viewInterviewQuestion.wxss
+++ b/miniprogram/pages/questionBank/viewInterviewQuestion/viewInterviewQuestion.wxss
@@ -3,40 +3,34 @@ page {
 }
 .bank-wrap {
   background: white;
-  padding-bottom: 5vh;
+  padding-bottom: 8vh;
 }
-.bank-wrap .line {
-  width: 750rpx;
-  border: 1rpx solid rgba(187, 187, 187, 1);
+
+.bank-head {
+  display: flex;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
+  padding: 26rpx;
 }
-.score-time {
-  margin-bottom: 25rpx;
-}
-.bank {
-  margin-left: 34rpx;
-  overflow: auto;
-  padding-top: 22rpx;
-  max-height: 60vh;
-  min-height: 50vh;
-}
-.bank-title {
-  margin-left: 34rpx;
-  padding-top: 42rpx;
+
+.bank-head .bank-title {
   font-size: 50rpx;
   color: rgba(16, 16, 16, 1);
   text-align: left;
   font-family: PingFangSC-regular;
-  width: 80vw;
+  width: 83vw;
   text-overflow: ellipsis;
   overflow: hidden;
-  white-space: nowrap;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+
 }
-.next-question, .pre-question {
-  margin-top: 20rpx;
+.bank {
+  padding: 34rpx;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
 }
-.next-size {
-  padding-top: 20rpx;
-}
+
+
 .audio-play {
   width: 120rpx;
   height: 60rpx;
